--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,13 @@
   <distributionManagement>
 
 		<repository>
-			<id>Maven-release</id>
-			<url>http://localhost:8081/nexus/content/repositories/Maven-release/</url>
+			<packageRepository>
+			<id>Maven-package</id>
+			<url>http://3.144.207.75:8081/repository/package/Maven-package/</url>
 		</repository>
 		<snapshotRepository>
 			<id>Maven-snapshot</id>
-			<url>http://localhost:8081/nexus/content/repositories/Maven-snapshot/</url>
+			<url>http://3.144.207.75:8081/repository/snapshot/Maven-snapshot/</url>
 		</snapshotRepository>		
   </distributionManagement>
 </project>
